# cite-agent

./: .gitignore  LICENSE  PROJECT.md  README.md  pyproject.toml
src/citation_agent/: __init__.py  cli.py  config.py  pipeline.py
src/citation_agent/decide/: __init__.py  citation_decider.py
src/citation_agent/edit/: __init__.py  bib_writer.py  diff_writer.py  tex_rewriter.py
src/citation_agent/ingest/: __init__.py  bib_loader.py  metadata_lookup.py  pdf_loader.py  tex_project.py
src/citation_agent/models/: __init__.py  schemas.py
src/citation_agent/parse/: __init__.py  claim_detection.py  sentence_split.py  tex_extract.py  tex_graph.py
src/citation_agent/report/: audit_json.py  markdown_report.py  text_report.py
src/citation_agent/retrieve/: __init__.py  bm25.py  embeddings.py  hybrid.py
src/citation_agent/validate/: compile_check.py  sanity_checks.py
src/citation_agent/verify/: __init__.py  evidence_selector.py  support_classifier.py
tests/: test_apply_pipeline.py  test_reporting_and_safety.py  test_tex_project.py  test_verify_existing.py
